Trying to solve the extra space:

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   max-width: 1440px;
   font-size: 15px;
   margin: 0px ;
-  width: 100%;
+  width: 114%;
  
   
   
